# demasci-deploy

./: .dockerignore  .gitignore  .pylintrc  .style.yapf  LISCENSE  Makefile  PowerShellScripts.ps1  README.md  api.py  build_coin-or.sh  configure.sh  flask_app.py  google_key_example_gen.py  mypy.ini  pyproject.toml  pytest.ini  scripts.ps1  scripts.sh
.devcontainer/: devcontainer.json
LocalScripts/: BashScripts.sh
app_lib/: __init__.py  app_paths.py  example_visualization.py
app_lib/data_access/: google_sheets_service.py
app_lib/ray/: example.py
app_lib/utils/: appx_hash.py  file_parsing_helpers.py  jinja_render.py  local_cacher.py  plotly_helpers.py
docker/: Dockerfile  Dockerfile.base  Dockerfile.base-builder  Dockerfile.dev  Dockerfile.prod  README.md  prod.sh
k8s/: .gitignore  README.md  k8s_render_template.py  python-api-template.yml  python-api.yml  uvicorn.yml
python_base/: conflict.py  module1.py  module2.py
python_scripts/: validate_app_name.py
templates/: list_of_figures.html  list_of_items.html
tests/: base_test_case.py  test_base_test_case.py  test_k8s_render_template.py  test_repo_consistency.py
tests/data_access/: test_google_sheets.py
tests/fixtures/: k8s.yml  simple_function.py  text_file.txt
tests/utils/: test_appx_hash.py  test_file_parsing_helpers.py  test_jinja_render.py  test_jinja_render.py.f347c63a6b79514fbfb25abf9b206e51.tmp  test_local_cacher.py  test_plotly_helpers.py
