[tool.poetry]
name = "flask_app"
version = "0.0.1"
description = "Flask Application"
authors = ["James Davis <jamesmariodavis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.11"
Flask = "^2.0.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
pylint = "^2.10.2"
mypy = "^0.910"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
pytest-xdist = "^2.3.0"
