[tool.poetry]
name = "flask_app"
version = "0.0.1"
description = "Flask Application"
authors = ["James Davis <jamesmariodavis@gmail.com>"]

[tool.pytest.ini_options]
markers=[
    "external_deps: test requires internet connection and valid secrets",
]

# https://python-poetry.org/docs/dependency-specification/
[tool.poetry.dependencies]
python = ">=3.8, <3.11"
Flask = "^2.0.1"
gunicorn = "^20.1.0"
google-api-python-client = "^2.19.1"
Jinja2 = "^3.0.1"
numpy = "^1.21.2"
pandas = "^1.3.2"
plotly = "^5.3.1"
grpcio = "^1.40.0"
werkzeug = "^2.0.1"
ray = {extras = ["serve"], version = "^1.6.0"}

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
pylint = "^2.10.2"
mypy = "^0.910"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
pytest-xdist = "^2.3.0"
